--- a/data-viz/package.json
+++ b/data-viz/package.json
@@ -2,14 +2,22 @@
   "name": "data-viz",
   "private": true,
   "version": "0.0.0",
+  "main": "server.mjs",
   "type": "module",
   "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "node server.mjs",
+    "client": "npm start --prefix client",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "concurrently": "^7.0.0",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "cors": "^2.8.5",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
