--- a/data-viz/package.json
+++ b/data-viz/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "cors": "^2.8.5",
     "papaparse": "^5.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
